--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="https://img.icons8.com/ios-glyphs/512/hand-planting-1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
